Salesforce/force-app/main/default/objects/Validation_Message__mdt/Validation_Message__mdt.object-meta.xml
<CustomObject>
    <description>Define any validation error message for case</description>
    <label>Validation Message</label>
    <pluralLabel>Validation Messages</pluralLabel>
</CustomObject>