Salesforce/force-app/main/default/objects/Validation_Message__mdt/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <type>Picklist</type>
    <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Close</fullName>
                    <default>true</default>
                    <label>Close</label>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Assign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>