Salesforce/force-app/main/default/objects/Validation_Message__mdt/fields/Message_Content__c.field-meta.xml
<CustomField>
    <fullName>Message_Content__c</fullName>
    <description>Message Content</description>
    <inlineHelpText>Message Content</inlineHelpText>
    <label>Message Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>