Salesforce/force-app/main/default/objects/Validation_Message__mdt/fields/ObjectAPI__c.field-meta.xml
<CustomField>
    <fullName>ObjectAPI__c</fullName>
    <label>ObjectAPI</label>
    <type>Picklist</type>
    <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Case__c</fullName>
                    <default>true</default>
                    <label>Case__c</label>
                </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>